<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".localization.simple_case.LocalizationSimpleCase">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fruits"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            style="@style/ItemStyle"
            android:text="@string/orange" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/strawberry" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/grapes" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/watermelon" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/banana" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/pineapple" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/apple" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/jackfruit" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/dragon_fruit" />

        <TextView
            style="@style/ItemStyle"
            android:text="@string/guava" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_indonesian"
        style="@style/ButtonLanguage"
        android:layout_marginTop="20dp"
        android:text="@string/change_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>